added create , getOne and getAll functionality in backend